Fix overlap
FIx conflict

--- a/assets/base.css
+++ b/assets/base.css
@@ -1526,26 +1526,43 @@ details[open] > .share-button__fallback {
   -webkit-appearance: none;
   appearance: none;
   background-color: rgb(var(--color-background));
-  border: 0.1rem solid transparent;
-  border-radius: var(--inputs-radius);
   color: rgb(var(--color-foreground));
   font-size: 1.6rem;
   width: 100%;
-  box-shadow: 0 0 0 var(--inputs-border-width) rgba(var(--color-foreground), var(--inputs-border-opacity));
-  height: 4.5rem;
   box-sizing: border-box;
   transition: box-shadow var(--duration-short) ease;
-  filter: drop-shadow(
-    var(--inputs-shadow-horizontal-offset)
-    var(--inputs-shadow-vertical-offset)
-    var(--inputs-shadow-blur-radius)
-    rgba(var(--color-shadow), var(--inputs-shadow-opacity))
-  );
-  /* fix drop-shadow issue in Safari */
-  transform: translateZ(0);
+  border-radius: calc(var(--inputs-border-width) + var(--inputs-radius));
+  min-height: calc(4rem + var(--inputs-border-width) * 2);
+  min-width: calc(7rem + var(--inputs-border-width) * 2);
+  position: relative;
 }
 
-.field__input.text-area {
+.field:before,
+.select__select:before,
+.customer .field:before,
+.customer select:before {
+  pointer-events: none;
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: calc(var(--inputs-border-width) + var(--inputs-radius));
+  box-shadow: var(--inputs-shadow-horizontal-offset) var(--inputs-shadow-vertical-offset) var(--inputs-shadow-blur-radius) rgba(var(--color-base-text), var(--inputs-shadow-opacity));
+}
+
+.field:after,
+.select__select:after,
+.customer .field:after,
+.customer select:after {
+  pointer-events: none;
+  content: '';
+  position: absolute;
+  inset: var(--inputs-border-width);
+  border: 0.1rem solid transparent;
+  border-radius: var(--inputs-radius);
+  box-shadow: 0 0 0 var(--inputs-border-width) rgba(var(--color-foreground), var(--inputs-border-opacity));
+}
+
+.field-text-area:after {
   border-bottom-right-radius: 0;
 }
 
@@ -1625,8 +1642,8 @@ details[open] > .share-button__fallback {
 .field__label,
 .customer .field label {
   font-size: 1.6rem;
-  left: 1.5rem;
-  top: 1rem;
+  left: calc(var(--inputs-border-width) + 1.5rem);
+  top: calc(1rem + var(--inputs-border-width));
   margin-bottom: 0;
   pointer-events: none;
   position: absolute;
@@ -1644,7 +1661,7 @@ details[open] > .share-button__fallback {
 .customer .field input:not(:placeholder-shown) ~ label,
 .customer .field input:-webkit-autofill ~ label {
   font-size: 1rem;
-  top: 0.3em;
+  top: calc(var(--inputs-border-width) + 0.3rem);
   letter-spacing: 0.04rem;
 }
 
@@ -1654,7 +1671,7 @@ details[open] > .share-button__fallback {
 .customer .field input:focus,
 .customer .field input:not(:placeholder-shown),
 .customer .field input:-webkit-autofill {
-  padding: 2.2rem 1.5rem 0.8rem;
+  padding: calc(var(--inputs-border-width) + 2.2rem) calc(var(--inputs-border-width) + 1.5rem) calc(var(--inputs-border-width) + 0.5rem);
 }
 
 .field__input::-webkit-search-cancel-button,
